--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "mocha": "^2.2.5",
-    "should": "^6.0.3"
+    "should": "^6.0.3",
+    "istanbul": "~0.2.4",
+    "coveralls": "~2.7.1"
   }
 }
