--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "istanbul": "^0.3.17"
   },
   "devDependencies": {
+    "angular": "^1.4.1",
     "mocha": "^2.2.5",
     "protractor": "^2.1.0",
     "should": "^6.0.3"
